[gd_scene load_steps=8 format=3 uid="uid://43ajotxx3qd3"]

[ext_resource type="Script" path="res://RDE_Scripts/Local_Scripts/Mobs/base_mob.gd" id="1_2vok1"]
[ext_resource type="Texture2D" uid="uid://tfmw6jtjwy2m" path="res://RDE_Images/explosion1.png" id="2_eg004"]
[ext_resource type="PackedScene" uid="uid://d2ty2wiyymcwh" path="res://RDE_Scenes/Base Entities/i_frame_timer.tscn" id="2_qsc8h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xytya"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_205vq"]
bg_color = Color(0, 0, 0, 0.568627)

[sub_resource type="CircleShape2D" id="CircleShape2D_6i0y3"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_vu5pt"]
cull_mode = 1
polygon = PackedVector2Array(0, 20, 8, 19, 15, 15, 20, 8, 22, 0, 20, -8, 15, -16, 8, -21, 0, -22, -9, -20, -15, -16, -20, -8, -21, 0, -19, 8, -14, 15, -8, 19)

[node name="base_mob" type="CharacterBody2D"]
z_index = 2
script = ExtResource("1_2vok1")

[node name="MobCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xytya")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_eg004")

[node name="TrackDelay" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[node name="IFrameTimer" parent="." instance=ExtResource("2_qsc8h")]

[node name="LocalHPBar" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -25.0
offset_top = -50.0
offset_right = 25.0
offset_bottom = -46.0
grow_horizontal = 2
pivot_offset = Vector2(16.21, 0)
theme_override_styles/background = SubResource("StyleBoxFlat_205vq")
show_percentage = false

[node name="HitBox" type="Area2D" parent="."]
scale = Vector2(4, 4)

[node name="HitboxCollision" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_6i0y3")
debug_color = Color(0.652427, 0.51261, 0.223088, 0.42)

[node name="LightOccluder2D2" type="LightOccluder2D" parent="."]
scale = Vector2(1.935, 1.935)
occluder = SubResource("OccluderPolygon2D_vu5pt")

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_exited" from="HitBox" to="." method="_on_hit_box_area_exited"]
